
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef size_t uint32_t ;
typedef size_t int32_t ;


 int PLIB_SPI_BufferRead (int ) ;
 int PLIB_SPI_BufferWrite (int ,int ) ;
 int PLIB_SPI_ReceiverBufferIsFull (int ) ;
 int PLIB_SPI_TransmitBufferIsFull (int ) ;
 int SPI_ID_1 ;

int32_t DRV_SPI0_BufferAddWriteRead(const void * txBuffer, void * rxBuffer, uint32_t size)
{
    bool continueLoop;
    int32_t txcounter = 0;
    int32_t rxcounter = 0;
    do {
        continueLoop = 0;
        if(!PLIB_SPI_TransmitBufferIsFull(SPI_ID_1) && txcounter < size)
        {
            PLIB_SPI_BufferWrite(SPI_ID_1, ((uint8_t*)txBuffer)[txcounter]);
            txcounter++;
            continueLoop = 1;
        }

        while (txcounter != rxcounter)
        {
            while(!PLIB_SPI_ReceiverBufferIsFull(SPI_ID_1));
            ((uint8_t*)rxBuffer)[rxcounter] = PLIB_SPI_BufferRead(SPI_ID_1);
            rxcounter++;
            continueLoop = 1;
        }
        if (txcounter > rxcounter)
        {
            continueLoop = 1;
        }
    }while(continueLoop);
    return txcounter;
}
